--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="col-12" style="font-size: 1.2em;">
   <div class="mt-5 my-4">
-    <h2><%= icon('fas', 'paperclip') %> ビューティコラム</h2>
+    <a href="/blogs/"><h2><%= icon('fas', 'paperclip') %> ビューティコラム</h2></a>
     <div class="tags my-5">
       <div class="card border-secondary mb-3">
         <div class="card-header">キーワード一覧</div>
