--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,127 +25,134 @@
   </a>
 </div>
 
-<a href="/sales"><img src="<%= asset_path("banner_event.png") %>" class="img-fluid w-100 mb-3" alt="Responsive image"></a>
+<a href="/sales"><img src="<%= asset_path("banner_event.png") %>" class="img-fluid w-100 mb-3"
+    alt="Responsive image"></a>
 <h2>
   <p>💥 売れ筋ランキング</p>
-  </h2>
-  <div class="row text-center">
-    <% @cosmetics_count.each do |cosmetic| %>
-    <div class="col-lg-3 col-md-6 mb-4">
-      <div class="card h-100">
-        <a href="/cosmetics/<%= cosmetic.id %>"><img class="card-img-top" src="<%= url_for(cosmetic.image) %>" alt=""></a>
-        <div class="card-body">
-          <h4 class="card-title"> <a href="/cosmetics/<%= cosmetic.id %>"><%= cosmetic.product_name %></a> <span
-                                class="text-primary" style="font-size: 13px;"><%= cosmetic.comment_count %>個の評価</span></h4>
-                                <h5 class="text-danger"><%= number_to_currency(cosmetic.price) %></h5>
-          <p class="card-text text-left " style="font-size:12px"><%= cosmetic.desc.truncate(45) %></p>
-        </div>
-        <div class="card-footer">
-          <div class="main-comment-score" data-score="<%= cosmetic.ave_score %>"></div>
-        </div>
+</h2>
+<div class="row text-center">
+  <% @cosmetics_count.each do |cosmetic| %>
+  <div class="col-lg-3 col-md-6 mb-4">
+    <div class="card h-100">
+      <a href="/cosmetics/<%= cosmetic.id %>"><img class="card-img-top" src="<%= url_for(cosmetic.image) %>" alt=""></a>
+      <div class="card-body">
+        <h4 class="card-title"> <a href="/cosmetics/<%= cosmetic.id %>"><%= cosmetic.product_name %></a> <span
+            class="text-primary" style="font-size: 13px;"><%= cosmetic.comment_count %>個の評価</span></h4>
+        <h5 class="text-danger"><%= number_to_currency(cosmetic.price) %></h5>
+        <p class="card-text text-left " style="font-size:12px"><%= cosmetic.desc.truncate(45) %></p>
+      </div>
+      <div class="card-footer">
+        <div class="main-comment-score" data-score="<%= cosmetic.ave_score %>"></div>
       </div>
     </div>
-    <% end %>
   </div>
-  <h2>
-    <p>⭐️ 星4つ以上の商品</p>
+  <% end %>
+</div>
+<h2>
+  <p>⭐️ 星4つ以上の商品</p>
+</h2>
+<div class="row text-center">
+  <% if @cosmetics_rating.present? %>
+  <% @cosmetics_rating.each do |cosmetic| %>
+  <div class="col-lg-3 col-md-6 mb-4">
+    <div class="card h-100">
+      <a href="/cosmetics/<%= cosmetic.id %>"><img class="card-img-top" src="<%= url_for(cosmetic.image) %>" alt=""></a>
+      <div class="card-body">
+        <h4 class="card-title"> <a href="/cosmetics/<%= cosmetic.id %>"><%= cosmetic.product_name %></a> <span
+            class="text-primary" style="font-size: 13px;"><%= cosmetic.comment_count %>個の評価</span></h4>
+        <h5 class="text-danger"><%= number_to_currency(cosmetic.price) %></h5>
+        <p class="card-text text-left" style="font-size:12px"><%= cosmetic.desc.truncate(45) %></p>
+      </div>
+      <div class="card-footer">
+        <div class="main-comment-score" data-score="<%= cosmetic.ave_score %>"></div>
+      </div>
+    </div>
+  </div>
+  <% end %>
+  <% end %>
+</div>
+<br>
+<br>
+<h2>
+  <p>✨ ビューティコラム新着情報</p>
+</h2>
+<%# カードItem %>
+<% if @blogs.present? %>
+<hr class="featurette-divider">
+<div class="row featurette">
+  <div id=hover-effect-1 class="col-md-7" style=" cursor: pointer;"
+    onclick="location.href='/blogs/<%= @blogs[0].id %>'">
+    <div class="mb-2">
+      <span class="text-muted">Beauty Column</span>
+      <span class="text float-right"><%= @blogs[0].created_at.strftime("%F") %></span>
+    </div>
+    <h2 class="featurette-heading my-4"><%= @blogs[0].title %>
     </h2>
-    <div class="row text-center">
-          <% if @cosmetics_rating.present? %>
-          <% @cosmetics_rating.each do |cosmetic| %>
-    <div class="col-lg-3 col-md-6 mb-4">
-      <div class="card h-100">
-        <a href="/cosmetics/<%= cosmetic.id %>"><img class="card-img-top" src="<%= url_for(cosmetic.image) %>" alt=""></a>
-        <div class="card-body">
-          <h4 class="card-title"> <a href="/cosmetics/<%= cosmetic.id %>"><%= cosmetic.product_name %></a> <span
-                                class="text-primary" style="font-size: 13px;"><%= cosmetic.comment_count %>個の評価</span></h4>
-                                <h5 class="text-danger"><%= number_to_currency(cosmetic.price) %></h5>
-          <p class="card-text text-left" style="font-size:12px"><%= cosmetic.desc.truncate(45) %></p>
-        </div>
-        <div class="card-footer">
-          <div class="main-comment-score" data-score="<%= cosmetic.ave_score %>"></div>
-        </div>
-      </div>
+    <div class="wrap">
+      <p class="lead"><%= truncate(sanitize(@blogs[0].content, tags: []), length: 200) %></p>
     </div>
-    <% end %>
-    <% end %>
+    <div class="text-right mt-3">
+      <a href='#'>すべて読む<span class="my-5" style="color: pink;"> ＞</span></a>
     </div>
-    <br>
-    <br>
-    <h2>
-      <p>✨ ビューティコラム新着情報</p>
+  </div>
+  <div class="col-md-5">
+    <a href="/blogs/<%= @blogs[0].id %>"><img src="<%= url_for(@blogs[0].image) %>" id="blog_img-1" class="img-fluid"
+        alt="Responsive image"></a>
+  </div>
+</div>
+<%# End %>
+<hr class="featurette-divider">
+<div class="row featurette">
+  <div id=hover-effect-2 class="col-md-7 order-md-2" style=" cursor: pointer;"
+    onclick="location.href='/blogs/<%= @blogs[1].id %>'">
+    <div class="mb-2">
+      <span class="text-muted">Beauty Column</span>
+      <span class="text float-right"><%= @blogs[1].created_at.strftime("%F") %></span>
+    </div>
+    <h2 class="featurette-heading"><%= @blogs[1].title %></h2>
+    <div class="wrap">
+      <p class="lead"><%= truncate(sanitize(@blogs[1].content, tags: []), length: 200) %></p>
+    </div>
+    <div class="text-right mt-3">
+      <a href="#">すべて読む<span class="my-5" style="color: pink;"> ＞</span></a>
+    </div>
+  </div>
+  <div class="col-md-5 order-md-1">
+    <a href="/blogs/<%= @blogs[1].id %>"><img src="<%= url_for(@blogs[1].image) %>" id="blog_img-1" class="img-fluid"
+        alt="Responsive image"></a>
+  </div>
+</div>
+<hr class="featurette-divider">
+<div class="row featurette">
+  <div id=hover-effect-3 class="col-md-7" style=" cursor: pointer;"
+    onclick="location.href='/blogs/<%= @blogs[2].id %>'">
+    <div class="mb-2">
+      <span class="text-muted">Beauty Column</span>
+      <span class="text float-right"><%= @blogs[2].created_at.strftime("%F") %></span>
+    </div>
+    <h2 class="featurette-heading"><%= @blogs[2].title %>
     </h2>
-    <%# カードItem %>
-    <% if @blogs.present? %>
-    <hr class="featurette-divider">
-    <div class="row featurette">
-      <div id=hover-effect-1 class="col-md-7" style=" cursor: pointer;"
-        onclick="location.href='/blogs/<%= @blogs[0].id %>'">
-        <div class="mb-2">
-          <span class="text-muted">Beauty Column</span>
-          <span class="text float-right"><%= @blogs[0].created_at.strftime("%F") %></span>
-        </div>
-        <h2 class="featurette-heading my-4"><%= @blogs[0].title %>
-        </h2>
-      <div class = "wrap">
-        <p class="lead"><%= truncate(sanitize(@blogs[0].content, tags: []), length: 200) %></p></div>
-        <div class="text-right mt-3">
-          <a href='#'>すべて読む<span class="my-5" style="color: pink;"> ＞</span></a>
-        </div>
-      </div>
-      <div class="col-md-5">
-      <a href="/blogs/<%= @blogs[0].id %>"><img src="<%= url_for(@blogs[0].image) %>" id="blog_img-1" class="img-fluid" alt="Responsive image"></a>
-      </div>
+    <div class="wrap">
+      <p class="lead"><%= truncate(sanitize(@blogs[2].content, tags: []), length: 200) %></p>
     </div>
-    <%# End %>
-    <hr class="featurette-divider">
-    <div class="row featurette">
-      <div id=hover-effect-2 class="col-md-7 order-md-2" style=" cursor: pointer;"
-        onclick="location.href='/blogs/<%= @blogs[1].id %>'">
-        <div class="mb-2">
-          <span class="text-muted">Beauty Column</span>
-          <span class="text float-right"><%= @blogs[1].created_at.strftime("%F") %></span>
-        </div>
-        <h2 class="featurette-heading"><%= @blogs[1].title %></h2>
-            <div class = "wrap">
-        <p class="lead"><%= truncate(sanitize(@blogs[1].content, tags: []), length: 200) %></p></div>
-        <div class="text-right mt-3">
-          <a href="#">すべて読む<span class="my-5" style="color: pink;"> ＞</span></a>
-        </div>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <a href="/blogs/<%= @blogs[1].id %>"><img src="<%= url_for(@blogs[1].image) %>" id="blog_img-1" class="img-fluid" alt="Responsive image"></a>
-      </div>
+    <div class="text-right mt-3">
+      <a href="#">すべて読む<span class="my-5" style="color: pink;"> ＞</span></a>
     </div>
-    <hr class="featurette-divider">
-    <div class="row featurette">
-      <div id=hover-effect-3 class="col-md-7" style=" cursor: pointer;"
-        onclick="location.href='/blogs/<%= @blogs[2].id %>'">
-        <div class="mb-2">
-          <span class="text-muted">Beauty Column</span>
-          <span class="text float-right"><%= @blogs[2].created_at.strftime("%F") %></span>
-        </div>
-        <h2 class="featurette-heading"><%= @blogs[2].title %>
-        </h2>
-            <div class = "wrap">
-        <p class="lead"><%= truncate(sanitize(@blogs[2].content, tags: []), length: 200) %></p></div>
-        <div class="text-right mt-3">
-          <a href="#">すべて読む<span class="my-5" style="color: pink;"> ＞</span></a>
-        </div>
-      </div>
-      <div class="col-md-5">
-        <a href="/blogs/<%= @blogs[2].id %>"><img src="<%= url_for(@blogs[2].image) %>" id="blog_img-1" class="img-fluid" alt="Responsive image"></a>
-      </div>
-    </div>
-    <% end %>
-  <script>
-      $(document).ready(function () {
-        $('.main-comment-score').raty({
-            readOnly: true,
-            score: function () {
-                return $(this).attr('data-score');
-            },
-            path: '/images'
-        });
-    });
-  </script>
+  </div>
+  <div class="col-md-5">
+    <a href="/blogs/<%= @blogs[2].id %>"><img src="<%= url_for(@blogs[2].image) %>" id="blog_img-1" class="img-fluid"
+        alt="Responsive image"></a>
+  </div>
+</div>
+<% end %>
+<script>
+  $(window).on("load", function(){
+      $('.main-comment-score').raty({
+        readOnly: true,
+        score: function () {
+          return $(this).attr('data-score');
+        },
+        path: '/images'
+      });
+});
+</script>
