--- a/app/views/cosmetics/show.html.erb
+++ b/app/views/cosmetics/show.html.erb
@@ -21,8 +21,9 @@
     <div class="col-6">
         <h3><%= @cosmetic.product_name %></h3>
         <hr>
-        <div class="text-right my-2" >
-        <span style="font-size:18px">TOTAL PRICE</span><span class="ml-2" style="font-weight:bold; color:red; font-size:25px;"><%= number_to_currency(@cosmetic.price) %></span>
+        <div class="text-right my-2">
+            <span style="font-size:18px">TOTAL PRICE</span><span class="ml-2"
+                style="font-weight:bold; color:red; font-size:25px;"><%= number_to_currency(@cosmetic.price) %></span>
         </div>
         <hr>
         <p><%= @cosmetic.company_name %></p>
@@ -161,11 +162,18 @@
                 }
             })
         });
+
+
+
+
+    });
+</script>
+<script>
+    $(window).on("load", function () {
         $('#star').raty({
             path: '/images',
             score: 0
         });
-
         $('.comment-score').raty({
             size: 5,
             readOnly: true,
@@ -174,6 +182,5 @@
             },
             path: '/images'
         });
-
     });
 </script>
