--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -55,7 +55,7 @@
 
       <div class="row mt-4">
         <div class="col-6">
-          <a href="/cosmetics" class="btn btn-dark">ショッピングに戻す</a>
+          <button onclick="window.location.href='/cosmetics'" type="button" class="btn btn-dark">ショッピングに戻す</button>
         </div>
         <div class="col-6 d-flex justify-content-end">
           <form action="/orders" method="POST">
